# lumendark

./: .gitignore  README.md
backend/: pyproject.toml
backend/lumendark/api/: __init__.py  app.py  auth.py  dependencies.py
backend/lumendark/api/routes/: __init__.py  orders.py  status.py  withdrawals.py
backend/lumendark/blockchain/: __init__.py  client.py  event_listener.py  transaction.py
backend/lumendark/executor/: __init__.py  action_handler.py  main_executor.py  message_handler.py  outgoing_processor.py
backend/lumendark/matching/: __init__.py  engine.py
backend/lumendark/models/: __init__.py  message.py  order.py  trade.py  user.py
backend/lumendark/queues/: __init__.py  action_queue.py  incoming.py  message_queue.py  outgoing.py
backend/lumendark/storage/: __init__.py  message_store.py  order_book.py  user_store.py
backend/scripts/: e2e_test.py  integration_test.py  setup_testnet.py
backend/tests/: test_api.py  test_executor.py  test_matching_engine.py
client/: pyproject.toml
client/lumendark_client/: __init__.py  client.py  exceptions.py
contracts/: Cargo.toml
contracts/orderbook/: Cargo.toml
contracts/orderbook/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/orderbook/test_snapshots/test/: test_constructor.1.json  test_deposit.1.json  test_deposit_requires_user_auth.1.json  test_deposit_zero_amount_fails.1.json  test_full_flow_deposit_trade_withdraw.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_multiple_deposits_same_user.1.json  test_multiple_users.1.json  test_settle.1.json  (+5 more)
